--- a/style.css
+++ b/style.css
@@ -14,4 +14,10 @@ h2{
     font-size: 200%
 }
 
-
+.a{padding:10px 8px;
+    width:50px;
+    color: aliceblue;
+    background: darkorange;
+    border:1px solid #555;
+    
+    ;}
