--- a/style.css
+++ b/style.css
@@ -19,9 +19,15 @@ h2{
     justify-content: center;
 }
 
-a{text-align: center; 
-    text-decoration: none;
-color: darkorange;
+a{padding: 10px 8px;
+    width: 50px;
+    color:floralwhite;
+    background: darkorange;
+    border: 1px solid #555;
+    border-radius:5px;
+    text-align: center;
+    user-select: none;
+    cursor: pointer;
 
 }
 
