--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ a{padding: 10px 8px;
     user-select: none;
     cursor: pointer;
     text-decoration: none;
+    justify-content: center;
 
 }
 
