--- a/style.css
+++ b/style.css
@@ -45,3 +45,11 @@ a:hover{
     font-size: 400%;
 }
 
+#rodape{ background: darkblue;
+    color: #fff;
+    margin: 0%;
+    padding: 0cap;
+    text-align: center;
+    font-size: 350;
+
+}
