--- a/style.css
+++ b/style.css
@@ -32,8 +32,7 @@ a:hover{
 #cabecalho{ 
     background: darkorange;
     color: #fff;
-    margin: 0%;
-    padding: 0%;
+    border: 0;
     text-align: center;
     font-size: 400%;
 }
